Changes to admin site templates

--- a/heterogeneous_system_integrator/.env.example
+++ b/heterogeneous_system_integrator/.env.example
@@ -6,3 +6,4 @@ RABBITMQ_USER=example_user
 RABBITMQ_PASSWORD=example_password
 RABBITMQ_HOST=192.168.1.56
 RABBITMQ_VHOST=example_vhost
+FLOWER_HOST=192.168.1.55
